# rust-bevy-fun

./: .mailmap  Cargo.toml  README.md
src/: debug.rs  helper.rs  main.rs  mesh.rs
